backup_individuals/sjeng/use_undefined_identifier/c3/allocate_time
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:546:6: error: use of undeclared identifier 'qword_41F680'
v5 = qword_41F680[v7]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:563:3: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
v8.m128d_f64[0] = ( double)( time_left - opp_time); 
~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:564:19: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
if ( xb_mode && v8.m128d_f64[0] > *( double *)&v0 / 5.0 ) 
                ~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:572:3: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
v9.m128d_f64[1] = *( ( double *)&v0 + 1); 
~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:573:3: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
v9.m128d_f64[0] = *( double *)&v0 / 10.0; 
~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:574:3: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
v9.m128d_f64[0] = _mm_cmplt_sd( v9, v8).m128d_f64[0]; 
~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:574:40: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
v9.m128d_f64[0] = _mm_cmplt_sd( v9, v8).m128d_f64[0]; 
                  ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:576:34: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
/ COERCE_DOUBLE( ~*( _QWORD *)&v9.m128d_f64[0] & *( _QWORD *)&v5 | COERCE_UNSIGNED_INT64( v5 + -5.0) & *( _QWORD *)&v9.m128d_f64[0]); 
                               ~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/utils.c:576:119: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
/ COERCE_DOUBLE( ~*( _QWORD *)&v9.m128d_f64[0] & *( _QWORD *)&v5 | COERCE_UNSIGNED_INT64( v5 + -5.0) & *( _QWORD *)&v9.m128d_f64[0]); 
                                                                                                                    ~~^~~~~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/allocate_time/src/obj/utils.o] Error 1
